persistent-storage.yaml
---
# test file to work with persistent storage
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nginx
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: test-nginx
  template:
    metadata:
      labels:
        app: test-nginx
    spec:
      containers:
        - name: test-nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/usr/share/nginx/html"
              name: nginx-pv-volume
      volumes:
        - name: nginx-pv-volume
          persistentVolumeClaim:
            claimName: nginx-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: test-nginx
spec:
  selector:
    app: test-nginx
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
